--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-tensorflow==2.10
-scikit-learn==1.3.0
+# Core app packages
+streamlit==1.28.0
 numpy==1.24.3
+pandas==2.1.0
 matplotlib==3.7.2
 seaborn==0.13.0
-pandas==2.1.0
-streamlit==1.28.0
-librosa==0.10.1
+scikit-learn==1.3.0
 opencv-python==4.8.1.78
+
+# TensorFlow (CPU version for Streamlit Cloud)
+tensorflow-cpu==2.10.0
