--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+# Upgrade pip first
+--upgrade pip
+
 # Core app packages
 streamlit==1.28.0
 numpy==1.24.3
@@ -5,7 +8,8 @@ pandas==2.1.0
 matplotlib==3.7.2
 seaborn==0.13.0
 scikit-learn==1.3.0
-opencv-python==4.8.1.78
+opencv-python-headless==4.8.1.78  # headless avoids GUI issues on Streamlit Cloud
 
-# TensorFlow (CPU version for Streamlit Cloud)
-tensorflow-cpu==2.10.0
+# TensorFlow CPU version (compatible with streamlit)
+tensorflow-cpu==2.14.0
+
